CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(Cotest VERSION 1.0.0 LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FILE(GLOB_RECURSE sources
  "${CMAKE_SOURCE_DIR}/src/*.cpp"
)

INCLUDE(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG 52eb8108c5bdec04579160ae17225d66034bd723 # v1.17.0
)

FetchContent_MakeAvailable(googletest)

ENABLE_TESTING()

ADD_EXECUTABLE(out ${sources})

# TARGET_INCLUDE_DIRECTORIES(cotest PUBLIC "${CMAKE_SOURCE_DIR}/include")
